--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -7,7 +7,7 @@ sources:
 path: ".gem_rbs_collection"
 gems:
 - name: rbs
-  version: 2.5.0
+  version: 2.6.0
   source:
     type: rubygems
 - name: i18n
@@ -15,7 +15,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 6f9f54a753a78c505e63e7f31a48b3f71f1b510d
+    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: ast
@@ -23,7 +23,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 6f9f54a753a78c505e63e7f31a48b3f71f1b510d
+    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: listen
@@ -31,7 +31,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 6f9f54a753a78c505e63e7f31a48b3f71f1b510d
+    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: parallel
@@ -39,7 +39,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 6f9f54a753a78c505e63e7f31a48b3f71f1b510d
+    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rainbow
@@ -47,7 +47,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 6f9f54a753a78c505e63e7f31a48b3f71f1b510d
+    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubygems
@@ -55,6 +55,10 @@ gems:
   source:
     type: stdlib
 - name: optparse
+  version: '0'
+  source:
+    type: stdlib
+- name: minitest
   version: '0'
   source:
     type: stdlib
@@ -75,6 +79,10 @@ gems:
   source:
     type: stdlib
 - name: tsort
+  version: '0'
+  source:
+    type: stdlib
+- name: mutex_m
   version: '0'
   source:
     type: stdlib
