--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -15,7 +15,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
+    revision: cd6db41310b911e1df3476246257510673f01b8a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: ast
@@ -23,7 +23,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
+    revision: cd6db41310b911e1df3476246257510673f01b8a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: listen
@@ -31,7 +31,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
+    revision: cd6db41310b911e1df3476246257510673f01b8a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: parallel
@@ -39,7 +39,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
+    revision: cd6db41310b911e1df3476246257510673f01b8a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rainbow
@@ -47,7 +47,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: f096cbfe0590fe6b6980c77256bde630b77dbb7f
+    revision: cd6db41310b911e1df3476246257510673f01b8a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubygems
@@ -55,6 +55,10 @@ gems:
   source:
     type: stdlib
 - name: optparse
+  version: '0'
+  source:
+    type: stdlib
+- name: tmpdir
   version: '0'
   source:
     type: stdlib
