--- a/examples/minitest/Rakefile
+++ b/examples/minitest/Rakefile
@@ -13,9 +13,9 @@ task :minitest => :src do
   Orthoses::Builder.new do
     use Orthoses::CreateFileByName,
       base_dir: out.to_s
-    use Orthoses::Filter, if: ->(name, content) {
+    use Orthoses::Filter do |name, content|
       name.start_with?("Minitest") || name == "Kernel"
-    }
+    end
     use Orthoses::Constant,
       strict: false,
       if: ->(current, const, val, rbs){
