--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -10,6 +10,22 @@ gems:
   version: 2.7.0
   source:
     type: rubygems
+- name: csv
+  version: '0'
+  source:
+    type: stdlib
+- name: fileutils
+  version: '0'
+  source:
+    type: stdlib
+- name: json
+  version: '0'
+  source:
+    type: stdlib
+- name: logger
+  version: '0'
+  source:
+    type: stdlib
 - name: minitest
   version: '0'
   source:
@@ -18,7 +34,7 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: logger
+- name: strscan
   version: '0'
   source:
     type: stdlib
@@ -27,10 +43,6 @@ gems:
   source:
     type: stdlib
 - name: pathname
-  version: '0'
-  source:
-    type: stdlib
-- name: json
   version: '0'
   source:
     type: stdlib
@@ -46,11 +58,15 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: mutex_m
+- name: forwardable
   version: '0'
   source:
     type: stdlib
 - name: monitor
+  version: '0'
+  source:
+    type: stdlib
+- name: mutex_m
   version: '0'
   source:
     type: stdlib
