--- a/examples/rack-test/Gemfile
+++ b/examples/rack-test/Gemfile
@@ -2,6 +2,7 @@ source "https://rubygems.org"
 
 gem "rack"
 gem "rake"
+gem "cgi"
 gem "minitest"
 gem "minitest-global_expectations"
 gem "orthoses", path: "../../"
