--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -7,22 +7,10 @@ sources:
 path: ".gem_rbs_collection"
 gems:
 - name: rbs
-  version: 2.7.0
+  version: 2.8.1
   source:
     type: rubygems
-- name: csv
-  version: '0'
-  source:
-    type: stdlib
-- name: fileutils
-  version: '0'
-  source:
-    type: stdlib
-- name: json
-  version: '0'
-  source:
-    type: stdlib
-- name: logger
+- name: cgi
   version: '0'
   source:
     type: stdlib
@@ -30,11 +18,15 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: securerandom
-  version: '0'
+- name: rack
+  version: '2.2'
   source:
-    type: stdlib
-- name: strscan
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 3cdcbea7f7a2a2ba5dffce3ee71f938f8b301687
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: logger
   version: '0'
   source:
     type: stdlib
@@ -43,6 +35,10 @@ gems:
   source:
     type: stdlib
 - name: pathname
+  version: '0'
+  source:
+    type: stdlib
+- name: json
   version: '0'
   source:
     type: stdlib
@@ -58,11 +54,7 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: forwardable
-  version: '0'
-  source:
-    type: stdlib
-- name: monitor
+- name: tempfile
   version: '0'
   source:
     type: stdlib
@@ -70,3 +62,12 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: uri
+  version: '0'
+  source:
+    type: stdlib
+- name: monitor
+  version: '0'
+  source:
+    type: stdlib
+gemfile_lock_path: examples/rack-test/Gemfile.lock
