--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -1,23 +1,12 @@
 ---
 sources:
-- name: ruby/gem_rbs_collection
+- type: git
+  name: ruby/gem_rbs_collection
+  revision: e2b79a0eb3acdaf36c53ec1af631387afb452d94
   remote: https://github.com/ruby/gem_rbs_collection.git
-  revision: main
   repo_dir: gems
 path: ".gem_rbs_collection"
 gems:
-- name: rbs
-  version: 2.8.1
-  source:
-    type: rubygems
-- name: csv
-  version: '0'
-  source:
-    type: stdlib
-- name: fileutils
-  version: '0'
-  source:
-    type: stdlib
 - name: json
   version: '0'
   source:
@@ -26,23 +15,7 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: minitest
-  version: '0'
-  source:
-    type: stdlib
-- name: securerandom
-  version: '0'
-  source:
-    type: stdlib
-- name: strscan
-  version: '0'
-  source:
-    type: stdlib
-- name: set
-  version: '0'
-  source:
-    type: stdlib
-- name: pathname
+- name: monitor
   version: '0'
   source:
     type: stdlib
@@ -50,23 +23,19 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: tsort
+- name: pathname
   version: '0'
   source:
     type: stdlib
+- name: rbs
+  version: 3.0.4
+  source:
+    type: rubygems
 - name: rdoc
   version: '0'
   source:
     type: stdlib
-- name: forwardable
-  version: '0'
-  source:
-    type: stdlib
-- name: monitor
-  version: '0'
-  source:
-    type: stdlib
-- name: mutex_m
+- name: tsort
   version: '0'
   source:
     type: stdlib
