--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,8 @@ jobs:
           - '3.0.5'
           - '3.1.3'
           - '3.2.1'
-
+    env:
+      BUNDLE_WITHOUT: steep
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
