Rename option for destination
With `base_dir` it is hard to know what base it is.
Use `to` instead.

--- a/examples/minitest/Rakefile
+++ b/examples/minitest/Rakefile
@@ -12,7 +12,7 @@ task :minitest => :src do
 
   Orthoses::Builder.new do
     use Orthoses::CreateFileByName,
-      base_dir: out.to_s
+      to: out.to_s
     use Orthoses::Filter do |name, content|
       name.start_with?("Minitest") || name == "Kernel"
     end
